Fix direct messages design to align with photoshop

--- a/aware-app/src/messaging-service/ChatSelector/DirectMessage/DirectMessage.css
+++ b/aware-app/src/messaging-service/ChatSelector/DirectMessage/DirectMessage.css
@@ -2,15 +2,13 @@
     color: #babdc0;
     padding: 0;
     margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 .direct-message:hover {
-    background-color: #ccc;
+    background-color: #232f3e;
     text-decoration: none;
-}
-
-.direct-message-avatar, .direct-message-content {
-    display: inline-block;
 }
 
 .direct-message-content > p {
